[build_sphinx]
source-dir = docs
build-dir  = docs/_build

[upload_docs]
upload-dir = docs/_build/html

[metadata]
name = NAPScheduler
version = 0.0.1
summary = In-process task scheduler with Cron-like capabilities
keywords = scheduling cron
requires-python = >=2.4
description-file = README.rst

classifier = Development Status :: 5 - Production/Stable
      Intended Audience :: Developers
      License :: OSI Approved :: MIT License
      Programming Language :: Python
      Programming Language :: Python :: 2.4
      Programming Language :: Python :: 2.5
      Programming Language :: Python :: 2.6
      Programming Language :: Python :: 2.7
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.1
      Programming Language :: Python :: 3.2

[files]
packages =
        napscheduler
        napscheduler.triggers
        napscheduler.triggers.cron

extra_files =
        setup.py
